src/test/deca/context/invalid/test_error_2.7-5.deca
// Description:
//    Soulève l'erreur (2.7)
//
// Resultat:
//    Erreur contextuelle
//    Ligne 20 :  la méthode m est un champ définie dans une superclasse (règle 2.7)
//
// Historique:
//      cree le 19/01/2022

class A {
    int m;
}


class B extends A {
    int m() {
        return 4;
    }
}

